Update config file

--- a/event_manager/amplify/.config/project-config.json
+++ b/event_manager/amplify/.config/project-config.json
@@ -5,8 +5,8 @@
     "javascript": {
         "framework": "react",
         "config": {
-            "SourceDir": "src",
-            "DistributionDir": "build",
+            "SourceDir": "../src",
+            "DistributionDir": "../build",
             "BuildCommand": "npm run build",
             "StartCommand": "npm start"
         }
