--- a/event_manager/package.json
+++ b/event_manager/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.15.2",
     "firebase-tools": "^8.4.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
